# gsr-qt

./: .gitignore  CMakeLists.txt  README.md  install.sh
daemon/: CMakeLists.txt  dbusinterface.cpp  dbusinterface.h  main.cpp  notificationservice.cpp  notificationservice.h  shortcuts.cpp  shortcuts.h
daemon/actions/: togglerecordaction.cpp  togglerecordaction.h  togglerecordpauseaction.cpp  togglerecordpauseaction.h  toggleshowaction.cpp  toggleshowaction.h
daemon/kwin/: gsrkwinhelper.js
daemon/processes/: gsrargs.cpp  gsrargs.h  gsrcli.cpp  gsrcli.h  instanceprocess.cpp  instanceprocess.h  overlayprocess.cpp  overlayprocess.h
daemon/windowing/: activewindow.cpp  activewindow.h  x11fs.cpp  x11fs.h
notification/: CMakeLists.txt  main.cpp
notification/qml/: Notification.qml
overlay/: CMakeLists.txt  dbusinterface.cpp  dbusinterface.h  main.cpp  shutdownnotifier.cpp  shutdownnotifier.h  x11hacks.cpp  x11hacks.h
overlay/backends/: activewindow.cpp  activewindow.h  backend.cpp  backend.h  recording.cpp  recording.h  shutdownnotifier.cpp  shutdownnotifier.h
overlay/qml/: MainOverlay.qml
overlay/qml/components/: BigButton.qml  Header.qml  MainButtonRow.qml  SmallIconButton.qml  SmallSideButtonsColumn.qml  SubmenuListView.qml
overlay/qml/dialogs/: RecordSettingsDialog.qml
settings/: CMakeLists.txt  gsrsettings.cpp  gsrsettings.h
